css/styles.css
body {
  background-color: rgb(238, 238, 238);
}

header {
  background-color: rgb(76, 36, 116);
  color: #ffff;
  box-shadow: 0 1px 1px darkgrey;
}

.img-wrapper {
  margin-bottom: 2rem;
}

.img-wrapper > img {
  width: 100%;
  border-radius: 0.25rem;
}

.label-wrapper,
.input-wrapper {
  font-size: 1.25rem;
  font-weight: 600;
}

.input-wrapper {
  display: flex;
  margin-bottom: 2rem;
  margin-top: 1rem;
}

.input-wrapper > input {
  flex-basis: 100%;
  height: 2rem;
  border-radius: 0.25rem;
  border: 1px solid darkgrey;
}

.textarea-wrapper {
  min-height: 10rem;
  display: flex;
  margin-bottom: 2rem;
  margin-top: 1rem;
}

.textarea-wrapper > textarea {
  flex-basis: 100%;
  border-radius: 0.25rem;
  border: 1px solid darkgrey;
}

.new-entry-button-wrapper {
  display: flex;
  justify-content: flex-end;
}

.new-entry-button-wrapper > button {
  background-color: rgb(76, 38, 118);
  color: #ffff;
  border-radius: 0.25rem;
  font-size: 1.25rem;
  padding: 0.65rem;
  cursor: pointer;
}

li {
  list-style: none;
  padding-inline-start: 0.75rem;
}

.entries-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1.25rem;
  margin-top: 1.5rem;
}

.entries-title > h1 {
  margin: 0;
}

div[data-view='entries'] ul {
  padding-inline-start: 0;
}

.entry-form-tab {
  background-color: rgb(76, 36, 118);
  color: #ffff;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  font-weight: 600;
  font-size: 1.05rem;
  cursor: pointer;
}

div[data-view='entries'] .img-wrapper {
  margin-bottom: 0;
}

div[data-view='entries'] > .no-entries {
  text-align: center;
}

.entries-tab {
  font-size: 1.5rem;
  padding-inline-start: 0.75rem;
  cursor: pointer;
}

.h3-pencil-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

i.fa-solid {
  cursor: pointer;
}

